# CPDCNN

./: .gitignore  CMakeLists.txt  ReadME.md  configure
app/: cnn.py  evaluation.ipynb  requirements.txt  test.py  test_cnn.py  test_cnnDecomp.py  train.py
app/configs/: config.yaml
app/extension-test/: tensorcontraction.py  tensorforward.py  test.py
app/src/datasets/: mnist.py
app/src/models/: __init__.py  cnn.py  cnn_decomp.py  conv_decomp_torch.py
app/src/trainers/: trainer.py
inc/: util.h
inc/cublas-norm/: syrk.h
lib/: setup.py  util.cu
lib/cublas-norm/: syrk.cu
src/: main.cpp  main.cu  test.py
test/: CMakeLists.txt  syrk.cu  test-syrk.cu  test-util.cu  test1.cpp
